Menu con data dinamica

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,8 @@
 .menu-wrapper-styles {
    width: 100%;
    display: inline-flex;
+   justify-content: end;
+   align-items: center;
 }
 
 .menu-wrapper-styles ul > li {
