--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,7 @@
    align-items: center;
 }
 
+
 .menu-wrapper-styles ul > li {
    width: auto;
 }
@@ -57,4 +58,32 @@ li.li-list-styles {
 
 header.header-wrapper-shadow {
    border-bottom: 1px solid rgba(0,0,0,.1);
+}
+
+   button.mobile-menu-wrapper {
+      display: none;
+   } 
+
+.burger-wrapper-styles {
+   display: flex;
+   flex-direction: column;
+   width: 150px;
+   margin: 10px !important;
+}
+
+.close-button-styles {
+   padding: 10px;
+   text-align: right;
+}
+
+@media(max-width: 800px) {
+
+   ul.menu-wrapper-styles {
+      display: none;
+   }
+
+   button.mobile-menu-wrapper {
+      display: block;
+   } 
+
 }
