--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,11 +1,32 @@
-section.main-footer-wrapper {
-    display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+
+footer {
+    font-family: "Oswald", sans-serif;
+}
+
+.main-footer-wrapper {
+ background-color: #2c2c2c;
+
 }
 
 .footer-widget-area {
+    display: inline-flex;
     width: 25%;
+}
+.footer-widget-area a {
+    color: #bcbcbc;
+}
+
+.footer-widget-area a:hover {
+    color: #fff;
 }
 
 .footer-widget-area ul li {
     list-style: none;
+}
+
+article.wrapper-sub-footer {
+    background-color: #d9d9d8;
+    color: #707070;
+    padding: 10px 0px;
 }
