--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,17 +2,30 @@
 
 footer {
     font-family: "Oswald", sans-serif;
+    color: #bcbcbc;
 }
+
+
 
 .main-footer-wrapper {
  background-color: #2c2c2c;
-
+ padding: 32px 0px;
+ display: flex;
+ flex-direction: row;
 }
+
+.container-footer-wrap {
+    display: flex !important;
+}
+
 
 .footer-widget-area {
-    display: inline-flex;
     width: 25%;
 }
+.footer-widget-area > h3 {
+    color: #fff;
+}
+
 .footer-widget-area a {
     color: #bcbcbc;
 }
@@ -23,6 +36,10 @@ footer {
 
 .footer-widget-area ul li {
     list-style: none;
+}
+
+.footer-widget-area address {
+    padding-left: 40px;
 }
 
 article.wrapper-sub-footer {
