--- a/src/components/Boton/Boton.scss
+++ b/src/components/Boton/Boton.scss
@@ -1,9 +1,10 @@
-.button-main-styles {
-    background-color: #2489ce;
-    color: #fff;
-}
+@import "../../scss/variables.scss";
 
-.button-main-styles:hover {
-    background-color: #2c2c2c;
-    color: #fff;
+button.button-main-styles {
+    background-color: $primary-color-blue;
+    color: $white;
+    &:hover {
+        background-color: $grey-main;
+        color: $white;
+    }
 }
