--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,8 +1,13 @@
 /// Global Variables
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 
 $primary-color-blue: #2489ce;
 
 /// Grey
 $grey-main: #2c2c2c;
 
-$white: #fff;
+$white: #fff; 
+
+// Fonts 
+
+$main-font-oswald: "Oswald", sans-serif;
