Card avanzado, falta alinear solo el icono

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,6 @@
 /// Global Variables
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 $primary-color-blue: #2489ce;
 
@@ -11,3 +12,4 @@ $white: #fff;
 // Fonts 
 
 $main-font-oswald: "Oswald", sans-serif;
+$sub-font-roboto: "Roboto", sans-serif;
