Terminado componente inclusive con tests

--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -12,3 +12,14 @@
     color: $white;
    }
 }
+
+.graphic-div-paddings {
+    padding-top: 16px;
+}
+
+button.cta-div-paddings {
+    padding: 15px;
+    font-weight: bold;
+    font-size: 1em;
+    
+}
