--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,3 +1,21 @@
+@import "../scss/variables.scss";
+
 .cards-space-above {
     margin: 15px;
+}
+
+.title-text-align {
+    text-align: center;
+    color: $primary-color-blue;
+    font-family: $main-font-oswald;
+    margin: 10px
+}
+
+.hr-line-width {
+    width: 30px;
+    background: $grey-main;
+    height: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
 }
