Home Services Card almost done

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -19,3 +19,9 @@
     margin-right: auto;
     margin-bottom: 25px;
 }
+
+.cards-description-padding {
+    padding: 0 15%;
+    margin-bottom: 30px;
+    color: $grey-light;
+}
