Parte de contacto casi lista

--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -4,7 +4,8 @@
     text-align: center;
     color: $primary-color-blue;
     font-family: $main-font-oswald;
-    margin: 10px
+    margin: 10px;
+    font-size: 2em;
 }
 
 .hr-line-width {
