--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,8 +6,6 @@ footer {
     margin-top: 20px;
 }
 
-
-
 .main-footer-wrapper {
  background-color: #2c2c2c;
  padding: 32px 0px;
@@ -53,6 +51,13 @@ p.p-tag-space {
     margin: 0px;
 }
 
+.sub-footer-area {
+    text-align: left;
+}
+
+.sub-footer-area2 {
+    text-align: right;
+}
 
 @media(max-width: 800px) {
     
