Casi Listo mi portfolio item page

--- a/src/scss/PortfolioItem.scss
+++ b/src/scss/PortfolioItem.scss
@@ -1,5 +1,9 @@
 @import "../scss/variables.scss";
 
+.section-grid-item-margins {
+    margin-bottom: 5%;
+}
+
 .paragraph-description-styles {
 
     font-size: 13px;
