--- a/src/scss/Login.scss
+++ b/src/scss/Login.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10% 0px;
+    margin: 10%;
 }
 
 .login-box-styles {
@@ -17,4 +17,8 @@
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.login-field-styles {
+    margin-top: 15px !important;
 }
