--- a/src/scss/BackOfficeHome.scss
+++ b/src/scss/BackOfficeHome.scss
@@ -1,12 +1,30 @@
+@import "../scss/variables.scss";
 
 .main-wrapper-styles {
     display: flex;
 }
 
 .aside-navbar-styles {
-    background-color: bisque;
+    
+    font-family: $main-font-oswald; 
+    &__user {
+    background-color:#2c2c2c;
+    color: #d9d9d8;
+    }
+    &__menu {
+        background-color: #f0f0f1;
+        color: #000;
+    }
 }
 
 .section-wrrapper-styles {
-    background-color:beige;
+    background-color:#f0f0f1;
+}
+
+.mui-icons-align {
+    vertical-align: bottom;
+}
+
+.grid-item-padding {
+    padding-left: 0px !important;
 }
