--- a/src/scss/BackOfficeHome.scss
+++ b/src/scss/BackOfficeHome.scss
@@ -8,8 +8,9 @@
     
     font-family: $main-font-oswald; 
     &__user {
-    background-color:#2c2c2c;
-    color: #d9d9d8;
+        padding: 16px;
+        background-color:#2c2c2c;
+        color: #d9d9d8;
     }
     &__menu {
         background-color: #f0f0f1;
@@ -27,4 +28,17 @@
 
 .grid-item-padding {
     padding-left: 0px !important;
+}
+
+li.list-item-decoration {
+    list-style-type: none;
+}
+
+ul.main-list-margin {
+   margin: 0px; 
+   padding: 16px;
+}
+
+h3.htitle-style-margin {
+    margin: 0px;
 }
