Giving shape to Private Routes

--- a/src/scss/BackOfficeHome.scss
+++ b/src/scss/BackOfficeHome.scss
@@ -2,6 +2,7 @@
 
 .main-wrapper-styles {
     display: flex;
+    margin: 16px 0;
 }
 
 .aside-navbar-styles {
@@ -41,4 +42,8 @@ ul.main-list-margin {
 
 h3.htitle-style-margin {
     margin: 0px;
+}
+
+.icon-db-margin {
+    margin-right: 10px;
 }
