--- a/src/scss/BackOfficeHome.scss
+++ b/src/scss/BackOfficeHome.scss
@@ -21,6 +21,7 @@
 
 .section-wrrapper-styles {
     background-color:#f0f0f1;
+    height: 100%;
 }
 
 .mui-icons-align {
@@ -40,8 +41,12 @@ ul.main-list-margin {
    padding: 16px;
 }
 
-h3.htitle-style-margin {
+h3.htitle-style-margin, h2 {
     margin: 0px;
+}
+
+h2.titleh-h2-padding {
+    padding-top: 32px;
 }
 
 .icon-db-margin {
