--- a/src/scss/PortfolioBackOffice.scss
+++ b/src/scss/PortfolioBackOffice.scss
@@ -1,3 +1,11 @@
 .portfolio-field-styles {
-    margin-top: 15px;
+    padding: 0 50px;
+    margin: 15px;
+}
+
+.button-form-styles {
+    width: 100px;
+    margin: 15px 0;
+    margin-left: auto;
+    margin-right: auto;
 }
