BackOffice Portfolio MVP ready

--- a/src/scss/BackOfficeHome.scss
+++ b/src/scss/BackOfficeHome.scss
@@ -5,7 +5,7 @@
     margin: 16px 0;
 }
 
-.aside-navbar-styles {
+aside.aside-navbar-styles {
     
     font-family: $main-font-oswald; 
     &__user {
