Ready to deploy

--- a/src/scss/PortfolioBackOffice.scss
+++ b/src/scss/PortfolioBackOffice.scss
@@ -33,6 +33,10 @@ button.portfolio-btn-delete-styles {
     width: 150px !important;
 }
 
+button.portfolio-delete-btn-styles {
+    width: 10px !important;
+}
+
 .mui-icons-align__portfolio {
     vertical-align: middle;
 }
