--- a/src/scss/NavPortfolio.scss
+++ b/src/scss/NavPortfolio.scss
@@ -8,13 +8,13 @@
 }
 
 button.portfolio-btn-styles {
-    width: 140px !important;
+    width: auto;
 }
 
 button.portfolio-btn-delete-styles {
-    width: 150px !important;
+    width: auto;
 }
 
 button.portfolio-btn-edit-styles {
-    width: 135px !important;
+    width: auto;
 }
